1998-11-01  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        * po_header: Use "ls --full-time" instead of "ls -e". Option -e does
          not exist in GNU fileutils 3.16 any more.

1998-10-07  Bruno Haible  <bruno@linuix.math.u-bordeaux.fr>

        Modifications for EMX, from Kai Uwe Rommel <rommel@ars.de>.
        * intl/localealias.c (PATH_SEPARATOR): New macro.
          (_nl_expand_alias): Use it instead of ':'.
        * intl/l10nflist.c (PATH_SEPARATOR): New macro.
          (_nl_make_l10nflist): Use it instead of ':'.
        * intl/dcgettext.c (IS_ABSOLUTE): New macro.
          (DCGETTEXT): Use it.

1998-06-01  Bruno Haible  <bruno@linuix.mathematik.uni-karlsruhe.de>

        * intl/*: Upgrade from 0.10.32 to 0.10.35.

1998-04-08  Bruno Haible  <bruno@linuix.mathematik.uni-karlsruhe.de>
	
	* Makefile.devel (GMSGFMT): Add --statistics.