@@ -20,11 +20,12 @@
 # include <config.h>
 #endif
 
+/* When using the GNU C library, tell <string.h> to declare stpcpy(). */
+#ifndef _GNU_SOURCE
+# define _GNU_SOURCE	1
+#endif
 
 #if defined HAVE_STRING_H || defined _LIBC
-# ifndef _GNU_SOURCE
-#  define _GNU_SOURCE	1
-# endif
 # include <string.h>
 #else
 # include <strings.h>
