@@ -20,6 +20,11 @@
 # include <config.h>
 #endif
 
+/* When using the GNU C library, tell <string.h> to declare stpcpy(). */
+#ifndef _GNU_SOURCE
+# define _GNU_SOURCE	1
+#endif
+
 #include <ctype.h>
 #include <stdio.h>
 #include <sys/types.h>
@@ -53,9 +58,6 @@ void free ();
 #endif
 
 #if defined HAVE_STRING_H || defined _LIBC
-# ifndef _GNU_SOURCE
-#  define _GNU_SOURCE	1
-# endif
 # include <string.h>
 #else
 # include <strings.h>
